--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>Hello There</h1>
+		<h2>This is Johnny</h2>
     <script src="app.js"></script>
     <p>This is Johnny</p>
   </body>
